<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- General string resources -->

    <string name="app_name">Stegandroid</string>
    
    <string name="about_string">About</string>
    <string name="aes_string">AES</string>
    <string name="audio_string">Audio</string>
	<string name="audio_channel_string">Audio channel</string>
   
	<string name="back_string">Back</string>

    <string name="click_select_destination_string">Click here to select destination</string>
	<string name="click_select_file_hide_string">Click here to select file to hide</string>
	<string name="click_select_video_string">Click here to select video</string>
	<string name="content_hide_string">Content to hide</string>	
	<string name="content_string">Content</string>
	<string name="cryptography_string">Cryptography</string>
		
	<string name="decode_content_string">Decode content</string>
	<string name="decode_video_string">Decode a video</string>
	<string name="description_about_string">This project is created in the context of a MSc Computer Security at the University of Kent in United Kingdom</string>
    <string name="destination_string">Destination</string>
    <string name="display_content_string">Display content</string>	

	<string name="empty_string"></string>
	<string name="encode_video_string">Encode a video</string>
	<string name="enter_key_encrypt_string">Enter key for encrypt data</string>
	<string name="enter_key_decrypt_string">Enter key for decrypt data</string>
  	<string name="enter_file_extension_string">Enter file extension</string>
	<string name="enter_text_hide_string">Enter here the text to hide</string>
			
	<string name="file_extension_string">File extension</string>
	<string name="file_hide_string">File to hide</string>
	
	<string name="hide_content_string">Hide content !</string>
		
	<string name="metadata_string">Metadata</string>
    <string name="metadata_channel_string">Metadata channel</string>
    
    <string name="ok_string">OK</string>
	
	<string name="record_video_string">Record a video</string>

	<string name="save_into_file_string">Save into file</string>	
	<string name="settings_string">Settings</string>
    <string name="select_destination_string">Select a destination</string>
	<string name="select_video_string">Select a video</string>
	<string name="social_network_string">Social Network</string>
	
	<string name="text_hide_string">Text to hide</string>
	
	<string name="use_audio_channel_string">Use audio channel</string>
	<string name="use_cryptography_string">Use cryptography</string>
	<string name="use_metadata_channel_string">Use metadata channel</string>
	<string name="use_video_channel_string">Use video channel</string>
	
	<string name="video_string">Video</string>
    <string name="video_channel_string">Video channel</string>
    <string name="video_source_string">Video source</string>
    
    <!-- Error string resources -->
	<string name="error_dest_video_empty_string">The path of the destination video is missing</string>
	<string name="error_file_extension_empty_string">The file extension is empty</string>
	<string name="error_file_manager_string">No file manager found</string>	
	<string name="error_file_to_hide_empty_string">The path of the file to hide is empty</string>
	<string name="error_src_video_path_empty_string">The path of the source video is missing</string>
	<string name="error_string">Error</string>
	<string name="error_text_to_hide_empty_string">The text to hide is empty</string>
	
	<!-- Menu directory strings -->
	<string name="menu_about_string">About</string>
	<string name="menu_decode_string">Decode</string>
	<string name="menu_encode_string">Encode</string>
	<string name="menu_main_string">Main</string>
	<string name="menu_settings_string">Settings</string>
	<string name="menu_social_network_string">Social network</string>
					
</resources>
