<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity" >

   	<!-- Title bar -->
      
   	<LinearLayout 
        android:layout_width="fill_parent"
  		android:layout_height="wrap_content"
  		android:background="#222222"
  		android:orientation="horizontal">
	      
	    <ImageButton
	        android:id="@+id/btn_back"
			android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:layout_marginLeft="7dp"
	        android:contentDescription="@string/back_string"
	        android:background="@android:color/transparent"
	        android:src="@drawable/ic_ab_back_holo_dark_am" />
	     	    
       <TextView
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:textSize="22sp"
	        android:paddingTop="10dp"
	        android:paddingLeft="5dp"
	        android:paddingBottom="10dp"
	        android:textColor="#FFFFFF"
	        android:text="@string/about_string" />
	</LinearLayout>
	
   	<!-- Content -->

	<ScrollView
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	
		<LinearLayout 
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">
   		
	    	<TextView 
	    	    android:layout_width="fill_parent"
	    	    android:layout_height="wrap_content"
	    	    android:layout_gravity="center_vertical|right"
	    	    android:layout_marginLeft="10dp"
	    	    android:layout_marginRight="10dp"
	    	    android:textSize="18sp"
	    	    android:textColor="#000000"
	    	    android:text="@string/description_about_string"/>
	    	
	   	</LinearLayout>
   	</ScrollView>
</LinearLayout>